--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,12 @@
 </div>
 
 <div id="home" ng-show="showHome" class="contentBlock">
-	<p>Blablablabla y'a beaucoup de texte ici mais &ccedil;a ne se voit pas encore.</p>
+	<p>Charles Stome et son épouse,</p>
+	<p>Jacques Buisson, son mari,</p>
+	<p>Florent, Jérémy et Catherine, ses enfants,</p>
+	<p>Ainsi que toute la famille</p>
+	<p>Ont le regret de vous annoncer le décès de Mme Annie Buisson &agrave; son domicile de L'Houmeau (17) le 3 septembre 2014.</p>
+	<p>La crémation s'est déroulée dans la plus stricte intimité le 10 septembre.</p>
 </div>
 
 <div id="home" ng-show="showWhatHappened" class="contentBlock">
