--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Famille Buisson</title>
 	    <link rel="stylesheet" type="text/css" href="../css/index.css" />
-	    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+	    <link href='http://fonts.googleapis.com/css?family=Playball:400,700' rel='stylesheet' type='text/css'>
 	</head>
 	<body ng-app="buissonApp">
 		<div ng-view=""></div>
