--- a/app/css/index.css
+++ b/app/css/index.css
@@ -3,7 +3,7 @@ body {
 	font-family: 'Playball', Arial, sans-serif;
 	background-position: right 60px;
 	background-attachment: fixed;
-	background-image: url(../images/background.png);
+	background-image: url(../images/background.jpg);
 	background-repeat: no-repeat;
 	margin: 0;
 }
@@ -31,14 +31,14 @@ a {
 @media (max-width: 960px) and (min-width: 500px) {
 	body {
 		background-size: 120%;
-		background-image: url(../images/background_medium.png) no-repeat;
+		background-image: url(../images/background_medium.jpg) no-repeat;
 		font-size: 0.8em;
 	}
 }
 @media (max-width: 500px) {
 	body {
 		background-size: 200%;
-		background-image: url(../images/background_small.png) no-repeat;
+		background-image: url(../images/background_small.jpg) no-repeat;
 		font-size: 0.5em;
 	}
 }
