--- a/app/views/main.html
+++ b/app/views/main.html
@@ -32,9 +32,9 @@
 		<br/>Vous pouvez donner &agrave; cette adresse :</p>
 		<p class="align-center"><a href="https://www.ligue-cancer.net/faire_un_don/en_ligne">https://www.ligue-cancer.net/faire_un_don/en_ligne</a></p>
 
-		<p>Si vous voulez nous exprimer vos condol&eacute;ances, vous pouvez nous &eacute;crire un mail &agrave; 
-		<p class="align-center"><a href="mailto:florent.buisson.1987@gmail.com">florent.buisson.1987@gmail.com</a></p>
-		<p>ou un courrier &agrave;</p>
+		<p>Si vous voulez nous exprimer vos condol&eacute;ances, vous pouvez nous &eacute;crire un mail &agrave; : </p>
+		<p class="align-center"><a href="mailto:famille@buisson.name">famille@buisson.name</a></p>
+		<p>ou un courrier &agrave; : </p>
 		<p class="align-center annie">Famille Buisson
 		<br/>8 rue des Pins
 		<br/>17137 L'Houmeau</p>
